Navbar em todas as paginas. As paginas de analise e cadastro de topicos funcionam, colaboradores, index e ranking tambem

--- a/rpgames/public/css/normalize.css
+++ b/rpgames/public/css/normalize.css
@@ -347,4 +347,12 @@
   [hidden] {
     display: none;
   }
+
+  input {
+    border: 1px solid #aaa;
+  }
+
+  button {
+    border: 1px solid #aaa;
+  }
   
