--- a/rpgames/public/css/style.css
+++ b/rpgames/public/css/style.css
@@ -1,13 +1,25 @@
 @import url('https://fonts.googleapis.com/css?family=Alata&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
 
 body {
     background: #dfdfdf;
     font-family: 'Raleway', sans-serif;
 }
 
+
+header {
+    background: #fff;
+    padding-top: 10px;
+}
+
 h1 {
     color: #444
+}
+
+table th, td {
+    border: 1px solid #111;
+    padding: 10px;
 }
 
 .navbar ul {
@@ -19,11 +31,11 @@ h1 {
     background-color: #333;
 }
 
-.navbar li {
+.navbar li.link {
     float: left;
 }
 
-.navbar li a {
+.navbar .link a {
     font-size: 17px;
     display: block;
     color: white;
@@ -33,34 +45,91 @@ h1 {
 }
 
 /* Change the link color to #111 (black) on hover */
-.navbar li a:hover {
+.navbar .link a:hover {
     background-color: #111;
+}
+
+.navbar .search form {
+    margin-top: 8px;
+    margin-right: 3px;
+    float: right;
+}
+.navbar .search form input {
+    padding: 6px;
+    font-size: 17px;
+    border: none;
+}
+
+.navbar .search form button {
+    padding: 6px;
+    border: none;
 }
 
 main {
     margin: 30px auto;
     width: 1080px;
-    background: #fff;
+    background: #f5f5f5;
     box-shadow: 3px 3px 16px 0px #aaa;
     padding: 30px;
+    
+    clear: both;
 }
 
-.toCenter {
+
+
+.main-content {
+    background-color: #fff;
+    color:#111;
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+    max-width: 960px;
+    margin: auto;
+    word-wrap: break-word;
+}
+
+.main-content .rpg-description {
+    width: 80%;
+}
+
+.main-content .rpg-description p {
+    text-align: justify;
+    text-indent: 3em;
+    word-break: break-all;
+}
+
+.main-content img {
+    border-radius: 100%;
+}
+
+.mian-content .text-media hr {
+    width: 10px;
+}
+
+.center-text {
     text-align: center;
 }
 
-.esquerda {
-    display: block;
-    width: 70px;
-    float: left;
+.main-content article.form-in-article {
+    padding-left: 10px;
+    margin-left: 10px;
+    border-left: 1px solid #aaa;
 }
 
-.direita {
-    display: block;
-    width: 700px;
-    float: right;
+.main-content article.form-in-article input {
+    margin-bottom: 10px;
+    padding: 15px;
 }
 
-footer {
-    clear: both;
+.main-content article.form-in-article button {
+    padding: 15px;
+}
+
+.super-logo {
+    font-family: 'Press Start 2P', cursive;
+    font-size: 4em;
+}
+
+.super-logo *{
+    display: inline;
 }
